# multiply-or-release

./: .gitignore  AppIcon.icns  Cargo.toml  Info.plist  README.md  build-macos.fish
.github/workflows/: build.yml
docs/: Checkpoint.md  Final.md  Proposal.md  Proposal_feedback.txt
src/: battlefield.rs  collision_groups.rs  debug_utils.rs  main.rs  panel_plugin.rs  ui.rs  utils.rs
