[package]
name = "multiply_or_release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0"}
bevy-inspector-egui = "0.26.0"
bevy_hanabi = { version = "0.14.0", default-features = false, features = ["2d"] }
bevy_rapier2d = "0.28.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1

